--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.andrey</groupId>
 	<artifactId>demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>demo</name>
 	<description>project for Get currency rates</description>
 	<properties>
